# MCP_Odoo

./: .gitignore  Dockerfile  GUIDE_UTILISATION.md  INTEGRATION_SUMMARY.md  LICENSE  LLAMACLOUD_INTEGRATION.md  README.md  README_SPACES.md  app.py  brief_website.md  deploy.sh  deploy_to_spaces.sh  docker-compose.yml  env.example  example_leads.json  get_started.py  init_repo.sh  leads_odoo_export.txt  mcp_config.json  mcp_odoo_server.py  mcp_server.py  pyproject.toml  requirements.txt  run_server.py  spaces_config.md  test_app.py  test_app_final.py  test_mcp_diagnostic.py  test_mcp_leads.py  test_mcp_server.py  test_odoo_connection.py  test_odoo_simple.py  verify_leads.py
config/: settings.py
mcp_tools/: __init__.py  crm_tools.py
odoo_connector/: __init__.py  connection.py
ui/: config_tab.py  crm_tab.py  gradio_app.py  utils.py
