[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-mcp"
version = "0.1.0"
description = "MCP Server pour l'intégration avec Odoo ERP"
authors = [
    { name = "Lucas Bometon", email = "lbometon@hotmail.fr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mcp", "odoo", "erp", "xml-rpc", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/lucasbometon/mcp-odoo"
Repository = "https://github.com/lucasbometon/mcp-odoo.git"
Issues = "https://github.com/lucasbometon/mcp-odoo/issues"

[project.scripts]
odoo-mcp = "odoo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
odoo_mcp = ["*.json"] 